# cmake-lib-gtest-sample

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
src/matrix-ioc/: CMakeLists.txt
src/matrix-ioc/include/: targetver.h
src/matrix-ioc/include/common/: StringExtensions.h  TextFormatter.h
src/matrix-ioc/include/logging/: logger.h
src/matrix-ioc/src/common/: StringExtensions.cpp  TextFormatter.cpp
src/matrix-ioc/src/logging/: logger.cpp
src/shared-lib/: CMakeLists.txt  stdafx.h  targetver.h
src/shared-lib/logging/: logger.cpp  logger.h
tests/: CMakeLists.txt
tests/matrix-ioc-tests/: CMakeLists.txt  tests.cpp
tests/matrix-ioc-tests/tests/: StringExtensionsTests.cpp  TextFormatterTests.cpp
tests/shared-lib-tests/: CMakeLists.txt  main.cpp  tests.cpp
